# lipo

./: .gitignore  Readme.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: code_quality.yml  test.yml
benchmarks/: benchmarks.ipynb
lipo/: __init__.py  hyperparameter.py  optimizer.py
tests/: test_hyperparameter.py  test_optimizer.py
