[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | docs/build/
  | node_modules/
  | venve/
  | .venv/
)
'''

[tool.poetry]
name = "lipo"
readme = 'Readme.md'  # Markdown files are supported
version = "1.2.1"

authors = ["Jan Beitner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"]

description = "Global, derivative- and parameter-free (hyperparameter) optimization"
repository = "https://github.com/jdb78/lipo"

[tool.poetry.dependencies]
python = "^3.6.1"

scikit-learn = ">=0.22.1"
dlib = "^19.19.0"
tqdm = "^4.52.0"

pytest-github-actions-annotate-failures = {version = "*", optional = true}

[tool.poetry.dev-dependencies]

mypy = "*"
wheel = "*"
flake8 = "*"
pylint = "*"
isort = "*"

pytest = "*"  # pytest sugar is not compatible
pytest-xdist = "*"
pytest-cov = "*"
pytest-sugar = "*"
coverage = "*"

# documentatation
sphinx = "*"
m2r = "*"
sphinx-autobuild = "*"
nbsphinx = "*"
pydata-sphinx-theme = "*"

[tool.poetry.extras]  # extras
github-actions = ["pytest-github-actions-annotate-failures"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
dirty = false
style = "semver"  # semantic versioning

[build-system]  # make the package pip installable
requires = ["poetry_core>=1.0.0", "poetry-dynamic-versioning>=0.9.0"]
build-backend = "poetry.core.masonry.api"
